add(buildSrc): add dependency holder at buildSrc using kotlin dsl

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,10 @@ apply plugin: 'kotlin-android-extensions'
 apply from: '../common_gradle.gradle'
 
 android {
-
+    defaultConfig{
+        applicationId ApplicationId.appId
+        multiDexEnabled true
+    }
 }
 
 dependencies {
