chore(common-gradle): add BASE URL and API KEY field

--- a/common_gradle.gradle
+++ b/common_gradle.gradle
@@ -12,6 +12,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
+
+        buildConfigField "String", "BASE_URL", "\"https://api.themoviedb.org/3/\""
+        buildConfigField "String", "API_KEY", "\"01c5d0d1ff15325934327ab3965e26f6\""
+        multiDexEnabled true
     }
 
     buildTypes {
