feature(movies-service): add new feature for movies service

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,6 +6,7 @@ android {
 }
 
 dependencies {
+    api project(':data:network')
     api project(':navigation')
     api project(':features:movies')
 }
